--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,18 @@
-* {
-    margin: 0px;
-}
-
-body,
-form,
-p {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-input:focus {
-    outline: none;
-}
-
-.display {
-    position: relative;
-    top: 10px;
-    border: 1px solid black;
-    overflow: scroll;
-    height: 94vh;
-
-}
-
 .card {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    border: 1.5px solid rgba(0, 0, 0, 0.500);
+    align-items: center;
+
+    border: 1px solid black;
+    width: 200px;
     border-radius: 5%;
-    width: 300px;
-    margin: 10px;
-    /* padding: 5px; */
-    height: 170px;
-    box-shadow: 0 0px 3px;
-    text-transform: capitalize;
+    box-shadow: 0 0 5px;
+    margin: 10px
 }
 
-.card:hover {
-    background-color: rgb(229, 229, 229);
+img,
+h1,
+p {
+    margin: 0;
 }
