--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+img,
+h1,
+p {
+    margin: 0;
+    padding-top: 10px;
+}
+
 .card {
     display: flex;
     flex-direction: column;
@@ -6,13 +13,23 @@
 
     border: 1px solid black;
     width: 200px;
+    height: 200px;
     border-radius: 5%;
     box-shadow: 0 0 5px;
     margin: 10px
 }
 
-img,
-h1,
-p {
-    margin: 0;
+
+.display {
+    margin-top: 20px;
+    height: 90vh;
+    overflow: scroll;
+
+
+}
+
+.display h3 {
+    position: absolute;
+    margin: 0px;
+    width: 100vw;
 }
