--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,14 @@
-img,
-h1,
-p {
-    margin: 0;
-    padding-top: 10px;
-}
+.item {
 
-.card {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     justify-content: center;
-    align-items: center;
 
     border: 1px solid black;
-    width: 200px;
-    height: 200px;
-    border-radius: 5%;
-    box-shadow: 0 0 5px;
-    margin: 10px
-}
+    width: 400px;
+    margin-top: 15px;
+    padding: 5px;
 
-
-.display {
-    margin-top: 20px;
-    height: 90vh;
-    overflow: scroll;
-
-
-}
-
-.display h3 {
-    position: absolute;
-    margin: 0px;
-    width: 100vw;
+    box-shadow: 0px 0px 8px;
 }
