--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,30 @@
 
     box-shadow: 0px 0px 8px;
 }
+
+.item-last {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+
+    border: 1px solid black;
+    width: 400px;
+    margin-top: 15px;
+    padding: 5px;
+
+    box-shadow: 0px 0px 8px;
+    background-color: aquamarine;
+}
+
+.loading {
+    background-color: chocolate;
+    color: white;
+    width: 200px;
+}
+
+.error {
+    background-color: red;
+    color: white;
+    width: 200px;
+}
