--- a/src/App.css
+++ b/src/App.css
@@ -6,54 +6,16 @@
     justify-content: center;
 
     border: 1px solid black;
-    width: 400px;
     margin-top: 15px;
     padding: 5px;
+    height: 20px;
+    width: 300px;
 
     box-shadow: 0px 0px 8px;
 }
 
-.item-last {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-
-    border: 1px solid black;
-    width: 400px;
-    margin-top: 15px;
-    padding: 5px;
-
-    box-shadow: 0px 0px 8px;
-    background-color: aquamarine;
-}
 
 h3,
 ul {
     margin: 0px;
-}
-
-.clip {
-
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    width: 90%;
-}
-
-.loading {
-    background-color: rgb(27, 207, 227);
-    color: white;
-    width: 200px;
-}
-
-.error {
-    background-color: red;
-    color: white;
-    width: 200px;
-}
-
-.display {
-    height: 80vh;
-    overflow: scroll;
 }
